--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,9 @@
     "incremental": true,
     "baseUrl": "src/",
     "paths": {
-      
-    } 
+      "@common/*": ["common/*"],
+      "@components/*": ["components/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
