--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
         "postinstall": "husky install"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-brands-svg-icons": "^6.1.1",
+        "@fortawesome/free-regular-svg-icons": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/react-fontawesome": "^0.1.18",
         "@heroicons/react": "^1.0.6",
         "daisyui": "^2.15.2",
         "next": "12.1.6",
