--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
         "@fortawesome/react-fontawesome": "^0.1.18",
         "@heroicons/react": "^1.0.6",
         "daisyui": "^2.15.2",
+        "gray-matter": "^4.0.3",
         "next": "12.1.6",
         "next-themes": "^0.2.0",
         "react": "18.1.0",
-        "react-dom": "18.1.0"
+        "react-dom": "18.1.0",
+        "react-markdown": "^8.0.3"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.2",
