--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "next-themes": "^0.2.0",
         "react": "18.1.0",
         "react-dom": "18.1.0",
-        "react-markdown": "^8.0.3"
+        "react-markdown": "^8.0.3",
+        "rehype-raw": "^6.1.1"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.2",
