--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "@fortawesome/free-regular-svg-icons": "^6.1.1",
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
         "@fortawesome/react-fontawesome": "^0.1.18",
+        "@sendgrid/mail": "^7.7.0",
         "daisyui": "^2.15.2",
         "gray-matter": "^4.0.3",
         "next": "12.1.6",
         "next-themes": "^0.2.0",
         "react": "18.1.0",
         "react-dom": "18.1.0",
+        "react-hot-toast": "^2.3.0",
         "react-markdown": "^8.0.3",
         "rehype-raw": "^6.1.1"
     },
